2006-08-19 19:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* Palettes/2Controls/GormFormAttributesInspector.m: Minor
	cleanup in ok:
	* Palettes/2Controls/GormNSFormInspector.gorm: Added missing
	connections.

2006-08-16 00:54-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormDocument.m: Simplify message in 
	fileRepresentationOfType:.
	* GormCore/GormNibWrapperBuilder.m: Correct test for menu which
	was causing the app to crash in openItems method.

2006-08-15 17:50-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormWrapperLoader.m: Correct problem introduced in 
	previous commit in [GormWrapperLoader loadFileWrapper: 
	withDocument:];
	
2006-08-15 02:16-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormFilePrefsManager.h: Add declaration for
	nibDataWithOpenObjects:
	* GormCore/GormFilePrefsManager.m: Rename nibData to 
	nibDataWithOpenObjects:
	* GormCore/GormNibWrapperBuilder.m: Create the IBOpenObjects
	list in buildWrapper...
	* GormCore/GormResource.m: Properly assign the data to the ivar
	in initWithData:...
	* GormCore/GormWrapperBuilder.m: Correct image loading and saving
	issue.
	* GormCore/GormWrapperLoader.m: Correct image problem.

2006-08-14 21:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperBuilder.m: Properly encode oids as
	integers in -[NSIBObjectData initWithDocument:] since bug#17426
	is corrected.

2006-08-14 01:04-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperBuilder.m: Temporary workaround in 
	-[NSIBObjectData initWithDocument:] until 17426 is resolved.

2006-08-13 21:48-EDT Gregory John Casamento <greg_casamento@yahoo.com>

	* GormCore/GormNibWrapperBuilder.m: Correct issue which was
	causing IB to complain about the File's Owner not having
	an oid in [NSIBObjectData initWithDocument:].
	* GormCore/GormWrapperBuilder.m: Correct issue discovered by