@@ -1,3 +1,10 @@
+2006-08-20 12:23-EDT Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormCore/GormDocument.m: Modify outdated "upgrade" warning in
+	fileWrapperRepresentationOfType:.
+	* GormCore/GormGormWrapperLoader.m: Set .gorms of version 1 as 
+	old in buildFileWrapperDictionaryWithDocument:.
+
 2006-08-19 19:18-EDT Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* Palettes/2Controls/GormFormAttributesInspector.m: Minor
